--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,18 @@ body {
     font-family: 'aAvocadoTaco', Arial, Helvetica, sans-serif;
 }
 
+.startScreen {
+    position: absolute;
+    max-width: 100%;
+    max-height: 100%;
+    top: 15%;
+}
+
+.startScreen img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 h1 {
     font-size: 64px;
     letter-spacing: 3px;
