--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
     height: 100vh;
     width: 100%;
     overflow: hidden;
+    margin: 0;
     font-family: 'aAvocadoTaco', Arial, Helvetica, sans-serif;
     backdrop-filter: blur(10px);
 }
@@ -132,20 +133,6 @@ canvas {
         transform: translate(-50%, -50%);
         z-index: 0;
     }
-
-    .startScreen {
-        width: 100%;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 1;
-    }
-
-    #startScreenImage {
-        height: 100%;
-        width: 100%;
-    }
 }
 
 @media only screen and (max-height: 480px) {
@@ -156,19 +143,5 @@ canvas {
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: 0;
-    }
-
-    .startScreen {
-        width: 100vh;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 1;
-    }
-
-    #startScreenImage {
-        height: 100%;
-        width: 100%;
     }
 }
